# mealplan-prepper

./: Dockerfile  dev.nginx.config  docker-compose.yaml
.devcontainer/: devcontainer.json
mealplan-prepper-backend/: manage.py  pyproject.toml
mealplan-prepper-backend/mealplan_prepper/: api.py  apps.py
mealplan-prepper-backend/mealplan_prepper/models/: recipe.py
mealplan-prepper-backend/mealplan_prepper_backend/: asgi.py  urls.py  wsgi.py
mealplan-prepper-backend/mealplan_prepper_backend/settings/: base.py  dev.py
mealplan-prepper-frontend/: README.md  package-lock.json  package.json  quasar.config.js
mealplan-prepper-frontend/src/layouts/: MainLayout.vue
