[tool.poetry]
name = "mealplan-prepper-backend"
version = "0.1.0"
description = ""
authors = ["Simon Bonzelet <mail@sbonzelet.de>"]
readme = "README.md"
include = ["mealplan-prepper/**", "mealplan_prepper_backend/**"]
s

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django = "^5.1"
django-ninja = "^1.3.0"


[tool.poetry.group.dev.dependencies]
markdown = "^3.6"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = "mealplan-prepper-backend.manage:main"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88